OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.8.? (2020-??-??)
------------------
- WC: Performance: switched to using get_plugins() instead of get_plugin_data()
  as the former caches its data.

5.8.2 (2020-01-19)
------------------
Features:
- WC: Vraag gebruikers om de plugin te beoordelen op de WP plugin directory.
- ALL: Add the form type as data to an ajax button.
- ALL: Allows to not render an empty form label.

5.8.1 (2020-01-07)
------------------
Bugs:
- OC1: Multiple errors in OC1 getTotalLineTaxClassLookupQuery() leading to mal
  constructed queries.
- OC1: setting config_complete_status is not an array in OC1 and thus cannot be
  used for determining the payment status.
- HS: Vat range calculation of discounts used incorrect precisions.
- MA2(.3?): Exception #0 (InvalidArgumentException): Unknown form type or
  acumulus.ERROR: Unknown block type
  Siel\AcumulusMa2\Block\Adminhtml\Batch\Form\Interceptor.
- WC3.8: border around status icon in status overview meta box removed.

5.8.0 (2019-10-28)
------------------
Features:
- ALL: Support for API v4.3.0 (https://www.siel.nl/acumulus/API/Changelog/):
  Store conceptid if invoice has been created as concept.

Bugs:
- WC: If the setting "Rond belastingen af bij subtotalen, in plaats van per
  regel" was not enabled and if the setting "Prijzen ingevoerd met belastingen"
  was set to "Ja, ik wil prijzen inclusief belasting invoeren", the plugin
  would recalculate the unit price ex vat incorrectly.
- WC3: WC3 changed what actions are fired during order create/update. As a
  result this plugin missed checking the status on order creation.
- WC: An invoice that gets saved in Acumulus will return '0000-00-00 00:00:00'